<resources>
    <string name="app_name">NutriPocket</string>

    <string name="nameFirst">First Name</string>
    <string name="nameLast">Last Name</string>

    <string name="age">Age (Year)</string>
    <string name="genderPrompt">Gender:</string>
    <string-array name="genderSpinner">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>

    <string name="activityLevel">What is your activity level?</string>
    <string-array name="activitySpinner">
        <item>Sedentary</item>
        <item>Light Activity</item>
        <item>Moderate Activity</item>
        <item>Heavy Activity</item>
        <item>Extreme Activity</item>
    </string-array>
    <string name="activityLevelPrompt">Activity Level:</string>

    <string name="bodyType">What is your body type?</string>
    <string-array name="bodyTypeSpinner">
        <item>Ectomorph</item>
        <item>Mesomorph</item>
        <item>Endomorph</item>
    </string-array>
    <string name="bodyTypePrompt">Body Type:</string>

    <string name="goal">What is your goal?</string>
    <string-array name="goalSpinner">
        <item>Lose Weight</item>
        <item>Maintain Weight</item>
        <item>Gain Weight</item>
    </string-array>
    <string name="goalPrompt">Goal:</string>

    <string name="log_button">Log</string>
    <string name="preferences_button">Preferences</string>
    <string name="nutrition_button">Enter Nutrition</string>
    <string name="NutritionTitle">Nutrition Facts</string>
    <string name="ServingsLabel">Servings Per Container: </string>
    <string name="ServingLabelAmount">Amount Per Serving</string>
    <string name="Fat">Total Fat: </string>
    <string name="Calories">Calories: </string>
    <string name="Cholesterol">Cholesterol: </string>
    <string name="Sugar">Sugar: </string>
    <string name="Sodium">Sodium: </string>
    <string name="Protein">Protein: </string>
    <string name="gram">&#160;g</string>
    <string name="dailyValue">Daily Value</string>
    <string name="dailyValueDescription">Some of the %DVs are based on a 2,000 calorie daily diet. However, your Daily Values may be higher or lower depending on your calorie needs, which vary according to age, gender, height, weight, and physical activity level.</string>
    <string name="submitButton">Submit</string>

    <string name="sedentaryTitle">Sedentary: </string>
    <string name="sedentaryDesc">Little to no exercise at all.</string>
    <string name="lightlyTitle">Lightly active:</string>
    <string name="lightlyDesc">Light to moderate formal exercise 1&#8211;3 days per week.</string>
    <string name="modTitle">Moderately Active:</string>
    <string name="modDesc">Moderate to intense formal exercise 3&#8211;5 times a week.</string>
    <string name="heavilyTitle">Very Active:</string>
    <string name="heavilyDesc">Moderate to intense formal exercise 6&#8211;7 days per week.</string>
    <string name="extTitle">Extremely Active:</string>
    <string name="extDesc">Intense formal exercise 6&#8211;7 days per week.</string>
    <string name="noticeDesc">Note: If your job is physically intensive, choose the activity level one step higher than you would normally pick based on formal exercise during the week.</string>

    <string name="ectomorphTitle">Ectomorph: </string>
    <string name="ectomorphDesc">Thin and lean with long limbs; usually has a fast metabolism and struggles to gain both body fat and muscle mass.</string>
    <string name="mesomorphTitle">Mesomorph: </string>
    <string name="mesomorphDesc">Strong rectangular shaped body with well defined muscles; gains muscle easily and gains fat more easily than ectomorphs. </string>
    <string name="endomorphTitle">Endomorph: </string>
    <string name="endomorphDesc">Soft and round body with muscles that are not well defined; usually has a slow metabolism and gains muscle and fat easily but finds it hard to lose fat.</string>


    <string name="CP1Button">Continue</string>
    <string name="CP2Button">Finish</string>
    <string name="introText">Tell us about yourself!</string>

    <string name="calorieGoal">Daily Calorie Goal: </string>
    <string name="calorieCurrent">%d</string>
    <string name="macroNutrientTitle">Macronutrients</string>
    <string name="carbValueGoal">%d</string>
    <string name="proteinValueGoal">%d</string>
    <string name="fatValueGoal">%d</string>
    <string name="carbGoalTitle">Carbs</string>
    <string name="proteinGoalTitle">Proteins</string>
    <string name="fatGoalTitle">Fats</string>
    <string name="buttonCaloricBreakdown">Caloric Breakdown</string>
    <string name="logRect">Log</string>
    <string name="prefRect">Preferences</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="carbs">Total Carbs:</string>
    <string name="cbTitle">Caloric Breakdown</string>
    <string name="_0">0</string>
    <string name="backbutton">Main Menu</string>


</resources>
